added two papers and news; changed avator;

--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -27,3 +27,18 @@ Yi:
 
 Laurent:
     url: http://mpl.sist.shanghaitech.edu.cn/Director.html
+
+Benjamin D.:
+    url: http://www.cis.jhu.edu/~haeffele/
+
+Kwan Ho Ryan:
+    url: https://ryanchankh.github.io/
+
+Derek:
+    url: https://cptq.github.io/
+
+Christina:
+    url: https://kebaek.github.io/
+
+Ziyang:
+    url: https://robinwu218.github.io/
