added papers in 2023

--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -69,6 +69,10 @@ Lim:
   - firstname: ["Derek"]
     url: https://cptq.github.io/
 
+Peng:
+  - firstname: ["Liangzu"]
+    url: https://www.liangzu.org/
+
 Baek:
   - firstname: ["Christina"]
     url: https://kebaek.github.io/
