--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ footer_text:
   # Photos from <a href="https://unsplash.com" target="_blank">Unsplash</a>.
 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
-icon: favicon.ico  # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
+icon: favicon.png  # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
 url:  https://tianjiaoding.com # the base hostname & protocol for your site
 baseurl:  # the subpath of your site, e.g. /blog/
