--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -108,4 +108,19 @@
 "dai":
   - firstname: ["Xili"]
     url: https://delay-xili.github.io/
-    
+
+"luo":
+  - firstname: ["Jinqi"]
+    url: https://peterljq.github.io/
+
+"thaker":
+  - firstname: ["Darshan"]
+    url: https://darshanthaker.github.io/
+
+"chattopadhyay":
+  - firstname: ["Aditya"]
+    url: https://achatto1.github.io/
+
+"callison-burch":
+  - firstname: ["Chris"]
+    url: https://www.cis.upenn.edu/~ccb/
