updated research interests and neurips papers

--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -124,3 +124,7 @@
 "callison-burch":
   - firstname: ["Chris"]
     url: https://www.cis.upenn.edu/~ccb/
+
+"shinde":
+  - firstname: ["Nimita"]
+    url: https://sites.google.com/view/nimitashinde
