--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -128,3 +128,11 @@
 "shinde":
   - firstname: ["Nimita"]
     url: https://sites.google.com/view/nimitashinde
+
+"pai":
+  - firstname: ["Druv"]
+    url: https://druvpai.github.io/
+
+"yu":
+  - firstname: ["Yaodong"]
+    url: https://yaodongyu.github.io/
