--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -136,3 +136,7 @@
 "yu":
   - firstname: ["Yaodong"]
     url: https://yaodongyu.github.io/
+
+"min":
+  - firstname: ["Hancheng"]
+    url: https://hanchmin.github.io/
